...
                        android:paddingEnd="12dp"
                        android:paddingBottom="6dp"
                        android:textColor="@color/primary_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailProductNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/on_surface"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailStoreNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/on_surface_muted" />

                    <TextView
...
