<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/home_title" />
    <item
        android:id="@+id/navigation_saved"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/saved_title" />
</menu>
